--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bpmn-js": "^7.3.0",
+    "bpmn-js-properties-panel": "^0.36.0",
+    "camunda-bpmn-moddle": "^4.4.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.12"
+    "element-ui": "^2.13.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
